Fix project spacing

--- a/src/css/work.css
+++ b/src/css/work.css
@@ -5,6 +5,7 @@
 
 .work .projects .firstH5 {
 	margin-top: 0!important;
+	height: 45px;
 }
 
 .work .projects .project h5 {
